--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main class="bg-dark-subtle">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -63,8 +63,56 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div class="container-fluid row px-5 py-3 justify-content-center">
+            <div class="form-check col-2">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+              <label class="form-check-label" for="flexCheckIndeterminate">
+                Indeterminate checkbox
+              </label>
+            </div>
+            <div class="form-check col-2">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+              <label class="form-check-label" for="flexCheckIndeterminate">
+                Indeterminate checkbox
+              </label>
+            </div>
+            <div class="form-check col-2">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+              <label class="form-check-label" for="flexCheckIndeterminate">
+                Indeterminate checkbox
+              </label>
+            </div>
+            <div class="form-check col-2">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+              <label class="form-check-label" for="flexCheckIndeterminate">
+                Indeterminate checkbox
+              </label>
+            </div>
+            <form class="d-flex col-2" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
     </main>
-
+    <footer >
+    <footer class="bg-dark" data-bs-theme="dark">
+      <div class="container-fluid row p-2">
+        <div class="col-3">
+          <a href="#">
+            <img class="social" src="/image/facebook.png" alt="">
+          </a>
+          <a href="#">
+            <img class="social" src="/image/instagram.png" alt="">
+          </a>
+          <a href="#">
+            <img class="social" src="/image/whatsapp.png" alt="">
+          </a>
+        </div>
+        <div class="d-flex col-9 justify-content-end align-items-center">
+          <p class="fs-6">© 2024 - Muchewicz Jonathan Andrés</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
