--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Home - Amazing Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -34,21 +35,21 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="carousel-img" src="/image/optional_banner_2.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block mb-5">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="carousel-img" src="/image/optional_banner_4.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block mb-5">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="carousel-img" src="/image/optional_banner_5.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block mb-5">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
@@ -63,41 +64,53 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div class="container-fluid row px-5 py-3 justify-content-center">
-            <div class="form-check col-2">
+          <section class="container-fluid row px-5 py-3 justify-content-center w-100">
+            <div class="form-check text-sm-start w-20">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
               <label class="form-check-label" for="flexCheckIndeterminate">
-                Indeterminate checkbox
+                checkbox1
               </label>
             </div>
-            <div class="form-check col-2">
+            <div class="form-check text-sm-start w-50">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
               <label class="form-check-label" for="flexCheckIndeterminate">
-                Indeterminate checkbox
+                checkbox2
               </label>
             </div>
-            <div class="form-check col-2">
+            <div class="form-check text-sm-start w-50">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
               <label class="form-check-label" for="flexCheckIndeterminate">
-                Indeterminate checkbox
+                checkbox3
               </label>
             </div>
-            <div class="form-check col-2">
+            <div class="form-check text-sm-start w-50">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
               <label class="form-check-label" for="flexCheckIndeterminate">
-                Indeterminate checkbox
+                checkbox4
               </label>
             </div>
-            <form class="d-flex col-2" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="d-flex col-12 col-md-8 justify-content-end" role="search">
+              <input class="form-control me-2 w-50" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success btn-sm w-10" type="submit">Search</button>
             </form>
+          </section>
+      <section class="container-fluid">
+        <div class="card" style="width: 18rem;">
+          <img src="/image/music_concert.jpg" class="card-img-top rounded-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Metallica in concert</h5>
+            <p class="card-text">The only concert of the most emblematic band in the world</p>
           </div>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <h6 class="card-title">150</h6>
+            <a href="/details.html" class="btn btn-outline-dark">Details</a>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer >
     <footer class="bg-dark" data-bs-theme="dark">
       <div class="container-fluid row p-2">
-        <div class="col-3">
+        <div class="col-3 p-2">
           <a href="#">
             <img class="social" src="/image/facebook.png" alt="">
           </a>
@@ -108,7 +121,7 @@
             <img class="social" src="/image/whatsapp.png" alt="">
           </a>
         </div>
-        <div class="d-flex col-9 justify-content-end align-items-center">
+        <div class="d-flex col-9 justify-content-end align-items-end">
           <p class="fs-6">© 2024 - Muchewicz Jonathan Andrés</p>
         </div>
       </div>
