--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
             <div class="container-fluid justify-content-between">
               <a class="navbar-brand w-50" href="/home.html">
                 <img class="logo" src="/image/amazing_brand.png" alt="logo amazing events">
@@ -19,39 +19,40 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav text-align-center">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="/upcomingEvents.html">Upcoming Events</a>
-                  <a class="nav-link" href="/pastEvents.html">Past Events</a>
-                  <a class="nav-link" href="/contact.html">Contact</a>
-                  <a class="nav-link" href="/stats.html">Stats</a>
+                <div class="navbar-nav text-align-center text-wrap">
+                  <a class="nav-link btn-link" role="button" aria-current="page" href="#">Home</a>
+                  <a class="nav-link btn-link" role="button" href="/upcomingEvents.html">Upcoming Events</a>
+                  <a class="nav-link btn-link" role="button" href="/pastEvents.html">Past Events</a>
+                  <a class="nav-link btn-link" role="button" href="/contact.html">Contact</a>
+                  <a class="nav-link btn-link" role="button" href="/stats.html">Stats</a>
                 </div>
               </div>
             </div>
           </nav>
     </header>
     <main class="bg-dark-subtle">
+
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="carousel-img" src="/image/optional_banner_2.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block mb-5">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
                     <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="carousel-img" src="/image/optional_banner_4.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block mb-5">
+                <img class="carousel-img" src="/image/optional_banner_3.jpg" class="d-block" alt="...">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
                     <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="carousel-img" src="/image/optional_banner_5.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block mb-5">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5">
                     <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
             </div>
@@ -64,38 +65,49 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <section class="container-fluid row px-5 py-3 justify-content-center w-100">
-            <div class="form-check text-sm-start w-20">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-              <label class="form-check-label" for="flexCheckIndeterminate">
-                checkbox1
-              </label>
+
+          <section class="container-fluid row px-1 py-3 justify-content-around w-100">
+            <div class="container-fluid d-flex row col-12 col-md-10 col-lg-5 justify-content-center w-auto m-1">
+              <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
+                <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate">
+                <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
+                  Category1
+                </label>
+              </div>
+              <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
+                <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate">
+                <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
+                  Category2
+                </label>
+              </div>
+              <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
+                <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate">
+                <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
+                  Category3
+                </label>
+              </div>
+              <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
+                <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate">
+                <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
+                  Category4
+                </label>
+              </div>
+              <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
+                  Category5
+                </label>
+              </div>
             </div>
-            <div class="form-check text-sm-start w-50">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-              <label class="form-check-label" for="flexCheckIndeterminate">
-                checkbox2
-              </label>
-            </div>
-            <div class="form-check text-sm-start w-50">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-              <label class="form-check-label" for="flexCheckIndeterminate">
-                checkbox3
-              </label>
-            </div>
-            <div class="form-check text-sm-start w-50">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-              <label class="form-check-label" for="flexCheckIndeterminate">
-                checkbox4
-              </label>
-            </div>
-            <form class="d-flex col-12 col-md-8 justify-content-end" role="search">
-              <input class="form-control me-2 w-50" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success btn-sm w-10" type="submit">Search</button>
+            
+            <form class="d-flex col-12 col-md-10 col-lg-4 justify-content-end w-auto" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-dark btn-sm" type="submit">Search</button>
             </form>
           </section>
-      <section class="container-fluid">
-        <div class="card" style="width: 18rem;">
+
+      <section class="container-fluid row justify-content-center w-100">
+        <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
           <img src="/image/music_concert.jpg" class="card-img-top rounded-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Metallica in concert</h5>
@@ -103,26 +115,63 @@
           </div>
           <div class="card-body d-flex justify-content-between align-items-center">
             <h6 class="card-title">150</h6>
-            <a href="/details.html" class="btn btn-outline-dark">Details</a>
+            <a href="/details.html" class="btn btn-outline-danger">Details</a>
           </div>
         </div>
+
+        <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
+          <img src="/image/marathon.jpg" class="card-img-top rounded-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">10K for life</h5>
+            <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+          </div>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <h6 class="card-title">3</h6>
+            <a href="/details.html" class="btn btn-outline-danger">Details</a>
+          </div>
+        </div>
+
+        <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
+          <img src="/image/costume_party.jpg" class="card-img-top rounded-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Halloween Night</h5>
+            <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
+          </div>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <h6 class="card-title">12</h6>
+            <a href="/details.html" class="btn btn-outline-danger">Details</a>
+          </div>
+        </div>
+
+        <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
+          <img src="/image/food_fair.jpg" class="card-img-top rounded-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Festival of the collectivities</h5>
+            <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+          </div>
+          <div class="card-body d-flex justify-content-between align-items-center">
+            <h6 class="card-title">5</h6>
+            <a href="/details.html" class="btn btn-outline-danger">Details</a>
+          </div>
+        </div>
+
       </section>
     </main>
     <footer class="bg-dark" data-bs-theme="dark">
-      <div class="container-fluid row p-2">
-        <div class="col-3 p-2">
-          <a href="#">
+      <div class="container-fluid row justify-content-center align-items-center p-2">
+        <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
+          <a href="https://www.facebook.com/">
             <img class="social" src="/image/facebook.png" alt="">
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/">
             <img class="social" src="/image/instagram.png" alt="">
           </a>
           <a href="#">
             <img class="social" src="/image/whatsapp.png" alt="">
           </a>
         </div>
-        <div class="d-flex col-9 justify-content-end align-items-end">
-          <p class="fs-6">© 2024 - Muchewicz Jonathan Andrés</p>
+        <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
+          <p class="fs-6 mt-3">© 2024 - Muchewicz Jonathan Andrés</p>
         </div>
       </div>
     </footer>
