--- a/home.html
+++ b/home.html
@@ -20,11 +20,11 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav text-align-center text-wrap">
-                  <a class="nav-link btn-link" role="button" aria-current="page" href="#">Home</a>
-                  <a class="nav-link btn-link" role="button" href="/upcomingEvents.html">Upcoming Events</a>
-                  <a class="nav-link btn-link" role="button" href="/pastEvents.html">Past Events</a>
-                  <a class="nav-link btn-link" role="button" href="/contact.html">Contact</a>
-                  <a class="nav-link btn-link" role="button" href="/stats.html">Stats</a>
+                  <a class="nav-link text-center" aria-current="page" href="#">Home</a>
+                  <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
+                  <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
+                  <a class="nav-link text-center" href="/contact.html">Contact</a>
+                  <a class="nav-link text-center" href="/stats.html">Stats</a>
                 </div>
               </div>
             </div>
@@ -35,24 +35,24 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="carousel-img" src="/image/optional_banner_2.jpg" class="d-block" alt="...">
+                <img src="/image/optional_banner_2.jpg" class="d-block carousel-img" alt="Banner Home...">
                 <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
-                    <h5>First slide label</h5>
-                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                    <h5 class="fs-1 fw-bolder">Home</h5>
+                    <p class="fs-3 mb-5 fw-bolder">Always in the front row.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="carousel-img" src="/image/optional_banner_3.jpg" class="d-block" alt="...">
+                <img src="/image/optional_banner_4.jpg" class="d-block carousel-img" alt="Banner Home...">
                 <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
-                    <h5>First slide label</h5>
-                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                    <h5 class="fs-1 text-dark fw-bolder">Home</h5>
+                    <p class="fs-3 mb-5 text-dark fw-bolder">The best exhibitions and art samples.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="carousel-img" src="/image/optional_banner_5.jpg" class="d-block" alt="...">
+                <img src="/image/optional_banner_5.jpg" class="d-block carousel-img" alt="Banner Home...">
                 <div class="carousel-caption d-none d-md-block mb-5 pb-5">
-                    <h5>First slide label</h5>
-                    <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                    <h5 class="fs-1 fw-bolder">Home</h5>
+                    <p class="fs-3 mb-5 fw-bolder">Here is the concert of your favorite artist.</p>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
 
       <section class="container-fluid row justify-content-center w-100">
         <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-          <img src="/image/music_concert.jpg" class="card-img-top rounded-top" alt="...">
+          <img src="/image/music_concert.jpg" class="card-img-top rounded-top" alt="Metallica in concert">
           <div class="card-body">
             <h5 class="card-title">Metallica in concert</h5>
             <p class="card-text">The only concert of the most emblematic band in the world</p>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-          <img src="/image/marathon.jpg" class="card-img-top rounded-top" alt="...">
+          <img src="/image/marathon.jpg" class="card-img-top rounded-top" alt="10K for life">
           <div class="card-body">
             <h5 class="card-title">10K for life</h5>
             <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-          <img src="/image/costume_party.jpg" class="card-img-top rounded-top" alt="...">
+          <img src="/image/costume_party.jpg" class="card-img-top rounded-top" alt="Halloween Night">
           <div class="card-body">
             <h5 class="card-title">Halloween Night</h5>
             <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
@@ -144,7 +144,7 @@
         </div>
 
         <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-          <img src="/image/food_fair.jpg" class="card-img-top rounded-top" alt="...">
+          <img src="/image/food_fair.jpg" class="card-img-top rounded-top" alt="Festival of the collectivities">
           <div class="card-body">
             <h5 class="card-title">Festival of the collectivities</h5>
             <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
@@ -161,13 +161,13 @@
       <div class="container-fluid row justify-content-center align-items-center p-2">
         <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
           <a href="https://www.facebook.com/">
-            <img class="social" src="/image/facebook.png" alt="">
+            <img class="social" src="/image/facebook.png" alt="Logo facebook link">
           </a>
           <a href="https://www.instagram.com/">
-            <img class="social" src="/image/instagram.png" alt="">
+            <img class="social" src="/image/instagram.png" alt="Logo instagram link">
           </a>
           <a href="#">
-            <img class="social" src="/image/whatsapp.png" alt="">
+            <img class="social" src="/image/whatsapp.png" alt="Logo whatsapp link">
           </a>
         </div>
         <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
