--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Events - Amazing Events</title>
+    <title>Contact - Amazing Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
     <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
@@ -22,8 +22,8 @@
                 <div class="navbar-nav text-align-center text-wrap">
                   <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
                   <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-                  <a class="nav-link text-center" href="#">Past Events</a>
-                  <a class="nav-link text-center" href="/contact.html">Contact</a>
+                  <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
+                  <a class="nav-link text-center" href="#">Contact</a>
                   <a class="nav-link text-center" href="/stats.html">Stats</a>
                 </div>
               </div>
@@ -32,7 +32,41 @@
     </header>
     <main class="bg-dark-subtle">
 
-          <section class="container-fluid justify-content-center col col-md-8 col-lg-5 py-3 contact">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/image/optional_banner_2.jpg" class="d-block carousel-img" alt="Banner Contact...">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
+                    <h5 class="fs-1 fw-bolder">Contact Us</h5>
+                    <p class="fs-3 mb-5 fw-bolder">Always in the front row.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/image/optional_banner_4.jpg" class="d-block carousel-img" alt="Banner Contact...">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
+                    <h5 class="fs-1 text-dark fw-bolder">Contact Us</h5>
+                    <p class="fs-3 mb-5 text-dark fw-bolder">The best exhibitions and art samples.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/image/optional_banner_5.jpg" class="d-block carousel-img" alt="Banner Contact...">
+                <div class="carousel-caption d-none d-md-block mb-5 pb-5">
+                    <h5 class="fs-1 fw-bolder">Contact Us</h5>
+                    <p class="fs-3 mb-5 fw-bolder">Here is the concert of your favorite artist.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+          <section class="container-fluid justify-content-center col col-md-8 col-lg-5 py-3">
             <form action="#" method="get" class="pt-5 container-fluid">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Full name:</label>
