arreglos de errores minimos

--- a/pastEvents.html
+++ b/pastEvents.html
@@ -105,13 +105,13 @@
           </label>
         </div>
         <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
+          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate6">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
             Book Exchange
           </label>
         </div>
         <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
+          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate7">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
             Cinema
           </label>
@@ -124,9 +124,9 @@
     </form>
     </div>
 
-    <section class="container-fluid row justify-content-center w-100">
+    <div id="card" class="container-fluid row justify-content-center w-100">
 
-    </section>
+    </div>
   </main>
   <footer class="bg-dark" data-bs-theme="dark">
     <div class="container-fluid row justify-content-center align-items-center p-2">
