checkbox search and details

--- a/home.html
+++ b/home.html
@@ -73,55 +73,13 @@
     </div>
 
     <div class="container-fluid row px-1 py-3 justify-content-around w-100">
-      <div class="container-fluid d-flex row col-12 col-md-10 col-lg-7 justify-content-center w-auto m-1">
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
-            Food Fair
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate2">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate2">
-            Museum
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate3">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate3">
-            Costume Party
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate4">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate4">
-            Music Concert
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
-            Race
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate6">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
-            Book Exchange
-          </label>
-        </div>
-        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
-          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate7">
-          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
-            Cinema
-          </label>
-        </div>
+      <div id="category" class="container-fluid d-flex row col-12 col-md-10 col-lg-7 justify-content-center w-auto m-1">
+
       </div>
 
-    <form class="d-flex col-10 col-md-5 col-lg-2 justify-content-end w-auto" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark btn-sm" type="submit">Search</button>
-    </form>
+      <form class="d-flex col-10 col-md-5 col-lg-2 justify-content-end w-auto" role="search">
+        <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
     </div>
 
     <div id="card" class="container-fluid row justify-content-center w-100">
