--- a/details.html
+++ b/details.html
@@ -36,24 +36,8 @@
   </header>
   <main class="bg-dark-subtle d-flex justify-content-center align-items-center h-details text-fs px-2">
 
-    <div class="card card-details">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="/image/music_concert.jpg" class="img-fluid rounded w-auto img-card-details" alt="Metallica in concert">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body p-2">
-            <h5 class="card-title text-decoration-underline text-center">Metallica in concert</h5>
-            <p class="card-text">The only concert of the most emblematic band in the world</p>
-            <p class="card-text">Date: 2024-01-22</p>
-            <p class="card-text">Category: Music Concert</p>
-            <p class="card-text">Place: Room A</p>
-            <p class="card-text">Capacity: 138000</p>
-            <p class="card-text">Estimate: 138000</p>
-            <p class="card-text"><small class="text-body-secondary">Price: 150</small></p>
-          </div>
-        </div>
-      </div>
+    <div id="cardDetails" class="container-fluid mx-1">
+      
     </div>
 
   </main>
@@ -75,7 +59,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="/js/datails.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
