modulacion de funciones mas creacion de stast js

--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav text-align-center text-wrap">
-            <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
-            <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-            <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
-            <a class="nav-link text-center" href="#">Contact</a>
-            <a class="nav-link text-center" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" aria-current="page" href="/home.html">Home</a>
+            <a class="text-center btn btn-outline-light m-1" href="/upcomingEvents.html">Upcoming Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="/pastEvents.html">Past Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" href="#">Contact</a>
           </div>
         </div>
       </div>
