--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
 </head>
 
-<body>
+<body class="bg-dark-subtle">
   <header>
     <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
       <div class="container-fluid justify-content-between">
@@ -24,17 +24,17 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav text-align-center text-wrap">
-            <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
-            <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-            <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
-            <a class="nav-link text-center" href="/contact.html">Contact</a>
-            <a class="nav-link text-center" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" aria-current="page" href="/home.html">Home</a>
+            <a class="text-center btn btn-outline-light m-1" href="/upcomingEvents.html">Upcoming Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="/pastEvents.html">Past Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" href="/contact.html">Contact</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  <main class="bg-dark-subtle d-flex justify-content-center align-items-center h-details text-fs px-2">
+  <main class="bg-dark-subtle d-flex justify-content-center align-items-center p-5 my-3 h-details text-fs px-2">
 
     <div id="cardDetails" class="container-fluid mx-1">
       
@@ -59,7 +59,8 @@
       </div>
     </div>
   </footer>
-  <script src="/js/datails.js"></script>
+  <script src="/js/datails.js" type="module"></script>
+  <script type="module" src="/js/module/scriptGlobal.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
