--- a/pastEvents.html
+++ b/pastEvents.html
@@ -24,11 +24,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav text-align-center text-wrap">
-            <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
-            <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-            <a class="nav-link text-center" href="#">Past Events</a>
-            <a class="nav-link text-center" href="/contact.html">Contact</a>
-            <a class="nav-link text-center" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" aria-current="page" href="/home.html">Home</a>
+            <a class="text-center btn btn-outline-light m-1" href="/upcomingEvents.html">Upcoming Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="#">Past Events</a>
+            <a class="text-center btn btn-outline-light m-1" href="/stats.html">Stats</a>
+            <a class="text-center btn btn-outline-light m-1" href="/contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
   </footer>
 
   <script src="/js/pastEvents.js" type="module"></script>
-  <script src="/js/scriptGlobal.js" type="module"></script>
+  <script src="/js/module/scriptGlobal.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
